@@ -1,5 +1,16 @@
 2009-03-23  Adele Peterson  <adele@apple.com>
 
+        Reviewed by Darin Adler & Dave Hyatt.
+
+        Fix for <rdar://problem/6621310> REGRESSION(35185): Apple Travel HTML emails missing some style after Safari 4 upgrade
+
+        Leopard Mail doesn't expect <style> to be in the body.  This change reverts back to the old behavior of
+        moving <style> to <head> for that version of Mail.
+
+        * html/HTMLElement.cpp: (WebCore::HTMLElement::inEitherTagList):
+
+2009-03-23  Adele Peterson  <adele@apple.com>
+
         Reviewed by Mark Rowe & Dave Hyatt.
 
         Merge some of the individual Mail quirks into two settings that we can check for future quirks.
